<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".LogIn_">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="26dp">


        <!-- Login Button -->

        <ImageView
            android:layout_width="179dp"
            android:layout_height="153dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo1"
            android:contentDescription="@string/register"/>

        <EditText
            android:id="@+id/emailId"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:autofillHints="@string/email"
            android:background="@color/splash1"
            android:drawableStart="@drawable/ic_action_user"
            android:drawableLeft="@drawable/ic_action_user"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/password"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/splash1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:autofillHints="@string/password"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawableStart="@drawable/ic_action_password"

            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"

            />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</androidx.drawerlayout.widget.DrawerLayout>